--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,7 +16,7 @@
   font-size: 30px;
   font-weight: 600;
   text-decoration: none;
-  color: var(--color-primary);
+  color: var(--color-text);
   /* text-shadow: 0 2px 16px #576cbc, 0 1px 2px #0008; */
 }
 
@@ -36,7 +36,7 @@
 
 .menuItems a {
   font-size: 25px;
-  color: var(--color-primary);
+  color: var(--color-text);
   text-decoration: none;
   transition: color 0.2s, text-shadow 0.2s;
 }
